# aiida-fhiaims

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/: install_aiida_github.sh
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_fhiaims/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py
aiida_fhiaims/cli/: species_defaults.py
aiida_fhiaims/data/: __init__.py  parameters.py  species_family.py  species_file.py
aiida_fhiaims/parsers/: aims_json.py  aims_out.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py  simple_example.py
examples/species_defaults/example_family/light/: 29_Cu_default
tests/: __init__.py  fixtures.py  test_basis_family.py  test_calculations.py  test_cli.py  test_data.py  test_helpers.py  test_parsers.py
tests/inputs/parameters/: simple.yaml
tests/inputs/structures/: GaAs.json
tests/output_files/mock-fhiaims-98fd57da32f4ae8c379b1a3d70dd3ccf/: aims.json  aims.out  control.in  geometry.in
tests/species_defaults/NAO-J/NAO-J-2/: 06_C_default  07_N_default
tests/species_defaults/NAO-J/NAO-J-3/: 06_C_default  07_N_default
tests/species_defaults/default/really_tight/: 31_Ga_default  33_As_default
tests/species_defaults/default/tight/: 102_No_default  31_Ga_default
tests/species_defaults/good/light/: 31_Ga_default
tests/species_defaults/light/: 33_As_default
tests/species_defaults/tight/: 33_As_default
